                - The UUIDs of the instances of the models '*Status', 'PaymentTerms', 'SettlementTerms' & 'AdditionalInformation'
                  created by the 'populate' script are now fixed (to be consistent between Creme instances).
                  A data migration fixes the UUIDs of the instances provided by default, and stores the old UUIDs in their field "meta_data".
            * Opportunities :
                - The UUIDs of the instances of the models 'SalesPhase' & 'Origin' created by the 'populate' script are now fixed (to be consistent between Creme instances).
                  A data migration fixes the UUIDs of the instances provided by default, and stores the old UUIDs in their field "meta_data".
                - The class 'bricks.OpportunityCardHatBrick' (& the related template) has been reworked to follow the changes in app "persons".
                  A new class 'ContactsSummary' has been introduced, and the class variable "displayed_contacts_number" has been move into it.
                - The method 'populate.Populator.create_report_n_graphes()' has been replaced by a new one, '_populate_report_n_graphes()'.
            * Emails :
                - In the class 'buttons.EntityEmailLinkButton', the attribute 'rtype_ids' has been removed ('relation_type_deps' is used instead).
                - The constructor of 'models.mail.EntityEmailSender' now takes only one argument (the 'EntityEmail' instance) ;
                  the class stored in the class attribute 'AbstractEntityEmail.email_sender_cls' uses this new signature.
                - In 'utils' :
                    - The constructor of 'EMailSender' takes now an argument "domain".
                    - In the class 'SignatureRenderer', the sub-class 'Image' has been removed ;
                      the class 'SignatureImage' is used instead.
            * Commercial :
                - The value 'constants.PROP_IS_A_SALESMAN' has been replaced by 'UUID_PROP_IS_A_SALESMAN'.